<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmRegister"
    android:layout_width="409dp"
    android:layout_height="match_parent"
    android:autofillHints="@string/txtFullName"
    android:background="#FFFFFF"
    tools:context=".SignUp">

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->

    <EditText
        android:id="@+id/txtFullName"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_marginBottom="80dp"
        android:autofillHints="@string/txtFullName"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/txtFullName"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/txtPhone"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/txtPhone"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_marginBottom="19dp"
        android:autofillHints="@string/txtEmailAddress"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/txtEmailAddress"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_marginBottom="39dp"
        android:autofillHints="@string/txtPassword"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="24dp"
        android:text="@string/lblSign"
        android:textColor="#090909"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/lblSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:fontFamily="sans-serif"
        android:text="@string/lblSignUp"
        android:textColor="#070707"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btnRegister"
        android:textColor="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>